syntax = "proto3";
package specy.rewards;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "specy/rewards/params.proto";
import "specy/rewards/merkel.proto";
// this line is used by starport scaffolding # 1

option go_package = "specy/x/rewards/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/specy/rewards/params";
  }
  // Queries a Merkel by index.
	rpc Merkel(QueryGetMerkelRequest) returns (QueryGetMerkelResponse) {
		option (google.api.http).get = "/specy/rewards/merkel/{datahash}";
	}

	// Queries a list of Merkel items.
	rpc MerkelAll(QueryAllMerkelRequest) returns (QueryAllMerkelResponse) {
		option (google.api.http).get = "/specy/rewards/merkel";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetMerkelRequest {
	  string datahash = 1;

}

message QueryGetMerkelResponse {
	Merkel merkel = 1 [(gogoproto.nullable) = false];
}

message QueryAllMerkelRequest {
	cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllMerkelResponse {
	repeated Merkel merkel = 1 [(gogoproto.nullable) = false];
	cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// this line is used by starport scaffolding # 3
